Tue Sep 14 16:31:51 2004  George Lebl <jirka@5z.com>

	* lib/number_theory/misc.gel: Use ApplyOverMatrix(2) on a few
	  functions, and add BernoulliNumber

	* src/geniustests.txt: Add test for BernoulliNumber

Tue Sep 14 09:57:15 2004  George Lebl <jirka@5z.com>

	* configure.in: some cleanup, and set the extra optimization flags
	  directly rather then use -O3 since then -O2 would just reset thing,
	  so we again optimize nicely.

	* src/calc.[ch], src/funclib.c, src/genius.c, src/graphing.c:
	  Implement translation of help texts coming from the standard
	  library.  Still error texts are not translated, will need to
	  figure that out.  User generated help strings are gotten with
	  "genius --gettext" similarly to the "--compile" option.

	* Makefile.am, lib/Makefile.am, po/POTFILES.in: create and use
	  lib/library-strings.c

	* lib/equation_solving/find_root.gel: Move FIXME's from help text
	  to comment

	* src/genius.c: add --version option

	* gtkextra/gdmpsfont.c: fix memleak

Thu Aug 26 09:26:43 2004  Takeshi AIHANA <aihana@gnome.gr.jp>

	* configure.in: Added 'ja' (Japanese) to ALL_LINGUAS.

Fri Aug 20 10:57:58 2004  George Lebl <jirka@5z.com>

	* genius.spec.in, pixmaps/48x48/Makefile.am: install 48x48 icon in
	  the proper place

Fri Aug 20 10:35:25 2004  George Lebl <jirka@5z.com>

	* configure.in, Makefile.am, src/gnome-genius.desktop.in,
	  pixmaps/*: Added an icon Eugenia Loli-Queru (eloli@hotmail.com)

Thu Aug 19 16:38:14 2004  George Lebl <jirka@5z.com>

	* Release 0.7.1

Thu Aug 19 16:15:32 2004  George Lebl <jirka@5z.com>

	* lib/calculus/differentiation.gel, lib/calculus/limits.gel:
	  Optimize and clean up the limitting/differentiating functions
	  a bit, and add NumericalLeftDerivative and NumericalRightDerivative

	* lib/misc/misc.gel, src/funclib.c, src/eval.[ch]: Make Identity
	  built-in for speed.  Also allow for stealing out of the parameter
	  list and use this technique in some places to further increased